--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,6 +31,7 @@ jobs:
       uses: dotnet/nbgv@master
       with:
         setAllVars: true
+    - run: echo 'SemVer2=${{ steps.nbgv.outputs.SemVer2 }}'
 
     - name: NuGet Restore
       run: dotnet restore ModbusRx.sln
