--- a/src/ModbusRx/ModbusRx.csproj
+++ b/src/ModbusRx/ModbusRx.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net6.0;net7.0;net8.0</TargetFrameworks>
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SerialPortRx" Version="2.3.4" />
+    <PackageReference Include="SerialPortRx" Version="3.0.3" />
   </ItemGroup>
 
   <ItemGroup>
