--- a/src/ModbusRx.IntegrationTests/ModbusRx.IntegrationTests.csproj
+++ b/src/ModbusRx.IntegrationTests/ModbusRx.IntegrationTests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net9.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
+    <NoWarn>$(NoWarn);xUnit1048;xUnit2012;SA1028;RCS1037;SA1202;SA1204</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
