--- a/src/ModbusRx/ModbusRx.csproj
+++ b/src/ModbusRx/ModbusRx.csproj
@@ -11,7 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SerialPortRx" Version="3.0.3" />
+    <PackageReference Include="SerialPortRx" Version="3.1.1" />
+    <!-- Explicitly reference the core Rx package for reliability across TFMs -->
+    <PackageReference Include="System.Reactive" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
